--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "einops>=0.8.1",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.5",
+    "seaborne>=1.1.0",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+]
